@@ -73,8 +73,8 @@ case "$(uname)" in
     ;;
 esac
 
-JBR_VERSION=21.0.8
-JBR_BUILD=b1038.68
+JBR_VERSION=25.0.2
+JBR_BUILD=b329.66
 
 if [ "$darwin" = "true" ]; then
     case $(uname -m) in
@@ -157,7 +157,7 @@ BOOTSTRAP_SYSTEM_PROPERTIES="${BOOTSTRAP_SYSTEM_PROPERTIES:-}"
 if [ "x${JPS_BOOTSTRAP_PREPARE_SKIP_DOWNLOAD:-0}" != "x1" ] ; then
   # Download and compile jps-bootstrap
   # shellcheck disable=SC2086
-  "$JAVA_HOME/bin/java" -ea -Daether.connector.resumeDownloads=false $BOOTSTRAP_SYSTEM_PROPERTIES -jar "$JPS_BOOTSTRAP_COMMUNITY_HOME/lib/ant/lib/ant-launcher.jar" "-Dbuild.dir=$JPS_BOOTSTRAP_PREPARE_DIR" -f "$JPS_BOOTSTRAP_DIR/jps-bootstrap-classpath.xml"
+  "$JAVA_HOME/bin/java" -ea -Daether.connector.resumeDownloads=false --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED $BOOTSTRAP_SYSTEM_PROPERTIES -jar "$JPS_BOOTSTRAP_COMMUNITY_HOME/lib/ant/lib/ant-launcher.jar" "-Dbuild.dir=$JPS_BOOTSTRAP_PREPARE_DIR" -f "$JPS_BOOTSTRAP_DIR/jps-bootstrap-classpath.xml"
 fi
 
 _java_args_file="$JPS_BOOTSTRAP_PREPARE_DIR/java.args.$$.txt"
@@ -167,7 +167,7 @@ trap "{ set +x; } >/dev/null 2>&1; rm -f '$_java_args_file'" EXIT INT HUP
 # Run jps-bootstrap and produce java args file to run actual user class
 export JPS_BOOTSTRAP_COMMUNITY_HOME
 # shellcheck disable=SC2086
-"$JAVA_HOME/bin/java" -ea -Xmx4g -Djava.awt.headless=true $BOOTSTRAP_SYSTEM_PROPERTIES -classpath "$JPS_BOOTSTRAP_PREPARE_DIR/jps-bootstrap.out.lib/*" org.jetbrains.jpsBootstrap.JpsBootstrapMain "--java-argfile-target=$_java_args_file" "$@"
+"$JAVA_HOME/bin/java" -ea -Xmx4g -Djava.awt.headless=true --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED $BOOTSTRAP_SYSTEM_PROPERTIES -classpath "$JPS_BOOTSTRAP_PREPARE_DIR/jps-bootstrap.out.lib/*" org.jetbrains.jpsBootstrap.JpsBootstrapMain "--java-argfile-target=$_java_args_file" "$@"
 
 # Run user class via wrapper from platform to correctly capture and report exception to TeamCity build log
-"$JAVA_HOME/bin/java" "@$_java_args_file"
+"$JAVA_HOME/bin/java" --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED "@$_java_args_file"
